--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "recicla_plus_2" "\0"
+            VALUE "CompanyName", "dev.ivensauro" "\0"
+            VALUE "FileDescription", "recicla_plus" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "recicla_plus_2" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "recicla_plus_2.exe" "\0"
-            VALUE "ProductName", "recicla_plus_2" "\0"
+            VALUE "InternalName", "recicla_plus" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 dev.ivensauro. All rights reserved." "\0"
+            VALUE "OriginalFilename", "recicla_plus.exe" "\0"
+            VALUE "ProductName", "recicla_plus" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
